# noodler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-release-python.yml
Lib/noodler/: __init__.py
