[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[project]
name = "noodler"
description = "Path stroking for UFO glyphs"
readme = "README.md"
dependencies = ["ufo2ft", "kurbopy>=0.13.1"]
dynamic = ["version"]
authors = [{ name = "Simon Cozens", email = "simon@simon-cozens.org" }]

[tool.setuptools.packages.find]
where = ["Lib"]
